--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1, h2 {
+h1,
+h2 {
   font-family: Lato;
+}
+
+body {
+  background-color: rgb(26, 26, 26) !important;
+}
+* {
+  color: white;
+}
+button, input {
+  color: black;
 }
